# jondownsnet_axum

./: .gitignore  Cargo.toml  jondowns.net_2024-04-18_10-50-24.report.html  jondowns.net_2024-04-18_11-17-59.report.html  jondowns.net_2024-04-18_11-18-24.report.html  jondowns.net_2024-04-18_11-25-15.report.html  jondowns.net_2024-04-18_11-25-35.report.html  jondowns.net_2024-04-18_11-34-43.report.html  jondowns.net_2024-04-18_11-38-01.report.html  jondowns.net_2024-04-19_13-47-51.report.html
assets/: input.css  output.css  output_mini.css  prism.css  prism.js
htmlpages/minified/: RUserPythonGuide.html  gamesToWin.html  getPRISM.html  palindromes.html  rust_r_trigrams.html  this_one_mistake.html
htmlpages/raw/: RUserPythonGuide.html  gamesToWin.html  getPRISM.html  palindromes.html  rust_r_trigrams.html  this_one_mistake.html
sql/: create_posts.sql  new_post.sql  update_post.sql
src/: config.rs  main.rs  posts.rs  routing.rs
templates/: base.html  blogtempl.html  index.html
