[package]
name = "jondownsnet_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version="1.28.0", features = ["macros", "rt-multi-thread"]}
axum = {version = "0.7.5"}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "any", "postgres", "time"] }
serde_yaml = "0.9.34"
serde = "1.0.197"
askama = "0.12.1"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
axum-server = {version = "0.6.0", features = ["tls-rustls"]}
tokio-openssl = "0.6.4"
openssl = "0.10.64"
futures-util = "0.3.30"
hyper-util = "0.1.3"
hyper = "1.3.1"
